# project-edith

./: .gitignore  CMakeLists.txt  Doxyfile  INDEX.md  README.md  main.cpp
EdithLib/: CMakeLists.txt  dummy.cpp  dummy.h  pch.h
Tests/: CMakeLists.txt  EmptyTest.cpp  gtest_main.cpp
docs/html/: 128-example.html  256-example.html  512-example.html  _c_1_2_users_2corte_2_desktop_2_project_01_edith_2project-edith_2octo-nail_2lvgl_2src_2core_2lv_event_8h-example.html  _c_1_2_users_2corte_2_desktop_2_project_01_edith_2project-edith_2octo-nail_2lvgl_2src_2misc_2lv_style_8h-example.html  _this_01is_01a_01_0gff0000_01red_0g_01word-example.html  annotated.html  annotated_dup.js  classdummy.html  classes.html  classlv__example_1_1_lv_example-members.html  classlv__example_1_1_lv_example.html  classlv__example__anim__3_1_1_lv_example_anim__3-members.html  classlv__example__anim__3_1_1_lv_example_anim__3.html  classlv__example__anim__timeline__1_1_1_l_v___example_anim_timeline__1-members.html  classlv__example__anim__timeline__1_1_1_l_v___example_anim_timeline__1.html  classlv__example__arc__2_1_1_arc_loader-members.html  classlv__example__arc__2_1_1_arc_loader.html  classlv__example__chart__6_1_1_example_chart__6-members.html  classlv__example__chart__6_1_1_example_chart__6.html  classlv__example__chart__8_1_1_stacked_area_chart-members.html  classlv__example__chart__8_1_1_stacked_area_chart.html  classlv__example__event__1_1_1_event__1-members.html  classlv__example__event__1_1_1_event__1.html  classlv__example__get__started__1_1_1_counter_btn-members.html  classlv__example__get__started__1_1_1_counter_btn.html  classlv__example__roller__3_1_1_lv___roller__3-members.html  classlv__example__roller__3_1_1_lv___roller__3.html  classlv__example__scroll__3_1_1_scroll_example__3-members.html  classlv__example__scroll__3_1_1_scroll_example__3.html  (+1359 more)
(+88 files in other folders)
